주어진 코드들을 컴파일 해주는 파일

--- a/2023_1st/CSE3103/Week_3/Lab/Makefile
+++ b/2023_1st/CSE3103/Week_3/Lab/Makefile
@@ -3,7 +3,7 @@ cppflags = -g -c
 
 target = main
 
-objectas = main.o Array.o RangeArray.o
+objects = main.o Array.o RangeArray.o
 src = main.cpp Array.cpp RangeArray.cpp
 
 $(target): $(objects)
