주어진 코드들을 컴파일 해주는 파일

--- a/2023_1st/CSE3103/Week_3/Assignment/Makefile
+++ b/2023_1st/CSE3103/Week_3/Assignment/Makefile
@@ -1,12 +1,12 @@
 cc = g++
-CPPFLAGS = -g -c
+cppflags= -g -c
 
 target = main
 
 objects = main.o Str.o
 src = main.cpp Str.cpp
 
-$(target): $(objects) Str.h
+$(target): $(objects)
 	$(cc) -o $(target) $(objects)
 
 clean: 
